@@ -1,3 +1,9 @@
+2009-09-08  Joel Brobecker  <brobecker@adacore.com>
+
+	* block.c (contained_in): Return zero for nested functions.
+	* blockframe.c (block_innermost_frame): Delete unreferenced local
+	variable.
+
 2009-09-08  Doug Evans  <dje@google.com>
 
 	* target.c (initialize_targets): Fix thinko in stack_cache_enabled_p.
